@@ -1,6 +1,10 @@
 ssh-import-id (3.22) unreleased; urgency=low
 
+  [ Dustin Kirkland ]
   * UNRELEASED
+
+  [ Andrew Starr-Bochicchio ]
+  * Port to python3 (LP: #1252474).
 
  -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 27 Feb 2014 09:39:24 -0600
 
